<resources>
    <!--  Fragments  -->
    <string name="title_favorite">Favorite</string>
    <string name="title_watch">Watch</string>
    <string name="title_release_date">Release date</string>

    <!--  Other  -->
    <string name="app_name">AnimeWatcher</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="anime_error_request">A data access error has occurred, you may need to check your Internet connection!</string>
    <string name="select_episode">Select episode</string>
    <string name="play_text">Play</string>
    <string name="description_error">Unfortunately, the description has not been added yet, but you can always contact us and let us know about it!</string>
    <string name="not_in_player">" Perhaps this anime is not in our player!"</string>
    <string name="internet_error">" You do not have an Internet connection!"</string>
    <string name="empty_bd">You don\'t have any favorite anime yet, but you can add them!</string>
    <string name="empty_answer_after_search">Nothing was found for your request!</string>
    <string name="registration">" Don't have an account yet? Register."</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="log_in_account">Log in</string>

</resources>