<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/select_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_watch"
        android:icon="@drawable/ic_watch_24"
        android:title="@string/title_watch" />

    <item
        android:id="@+id/navigation_release_date"
        android:icon="@drawable/ic_release_date_24"
        android:title="@string/title_release_date" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>