<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation_graph"
    app:startDestination="@id/navigation_watch">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.animewatcher.presentation.fragments.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_animeFragment"
            app:destination="@id/navigation_anime_info" />
    </fragment>
    <fragment
        android:id="@+id/navigation_watch"
        android:name="com.example.animewatcher.presentation.fragments.watch.WatchFragment"
        android:label="@string/title_watch"
        tools:layout="@layout/fragment_watch" >
        <action
            android:id="@+id/action_navigation_watch_to_animeFragment"
            app:destination="@id/navigation_anime_info" />
    </fragment>
    <fragment
        android:id="@+id/navigation_release_date"
        android:name="com.example.animewatcher.presentation.fragments.ReleaseDateFragment"
        android:label="@string/title_release_date"
        tools:layout="@layout/fragment_release_date" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.animewatcher.presentation.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.animewatcher.presentation.fragments.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_anime_info"
            app:destination="@id/navigation_anime_info" />
    </fragment>
    <fragment
        android:id="@+id/navigation_anime_info"
        android:name="com.example.animewatcher.presentation.fragments.info.AnimeInfoFragment"
        android:label="AnimeFragment" >
        <action
            android:id="@+id/action_navigation_anime_info_to_navigation_player"
            app:destination="@id/navigation_player" />
    </fragment>
    <fragment
        android:id="@+id/navigation_player"
        android:name="com.example.animewatcher.presentation.fragments.player.AnimePlayerFragment"
        android:label="fragment_anime_player"
        tools:layout="@layout/fragment_anime_player" />
</navigation>