<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/pageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Background image -->
                <ImageView
                    android:id="@+id/backgroundImage"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:background="@color/shimmerColor"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/shadow_gradient" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="156dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="96dp"
                        android:layout_height="140dp"
                        android:layout_margin="5dp"
                        android:elevation="10dp"
                        app:cardCornerRadius="8dp">

                        <!-- Anime image -->
                        <ImageView
                            android:id="@+id/posterAnime"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/shimmerColor"
                            android:scaleType="centerCrop"
                            android:transitionName="pageImageT" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <!-- Anime title -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="124dp"
                    android:layout_marginTop="185dp"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="4dp">

                    <!-- Last watched text -->
                    <TextView
                        android:id="@+id/animeNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ellipsize="end"
                        android:paddingStart="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="8dp"
                        android:textAlignment="textStart"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Wonder Egg Priority" />

                    <TextView
                        android:id="@+id/statusText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingStart="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="8dp"
                        android:text="Статус" />
                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <!-- Favourites button -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/favoriteCard"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="?attr/colorSurface">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="6dp">

                        <ImageView
                            android:id="@+id/button_favorite"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_heart_plus" />

                        <TextView
                            android:id="@+id/favButtonText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_favorite"
                            android:textAlignment="center" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- Episode button -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/episodeCard"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="?attr/colorSurface">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="6dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="22dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/imageViewEpisode"
                                android:layout_width="16dp"
                                android:layout_height="18dp"
                                android:layout_centerVertical="true"
                                android:paddingTop="2dp"
                                android:src="@drawable/ic_episode" />

                            <TextView
                                android:id="@+id/ep_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/imageViewEpisode"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingHorizontal="6dp"
                                android:textSize="14sp"
                                tools:text="12 - DUB" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_episode"
                            android:textAlignment="center" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- Play button -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/play_card"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="?attr/colorSurface">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="6dp">

                        <ImageView
                            android:id="@+id/episodeButtonForSpinner"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_play" />

                        <TextView
                            android:id="@+id/playButtonText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/play_text"
                            android:textAlignment="center" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


            <!-- Synopsis -->
            <TextView
                android:id="@+id/animeDetailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="18dp"
                android:paddingTop="6dp"
                android:paddingEnd="18dp"
                android:textStyle="italic" />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressbarInPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:indicatorSize="40dp"
            app:trackThickness="20dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/errorCard"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/anime_error_request" />
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</ScrollView>